--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
-<html lang=""pt-br>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-acale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Interativa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"
-         <section class="page">
-            <h1>Bem Vinda!</h1>
+    <div class="container">
+        <section class="page">
+            <h1>Bem-vinda!</h1>
             <p>Arraste para cima para continuar!</p>
         </section>
-        <section class="page"
+        <section class="page">
             <h2>Frase 1 aqui!</h2>
             <p>"Frase 1 coloca aqui!"</p>
         </section>
-        <section class="page"
+        <section class="page">
             <h2>Imagem 1 aqui!</h2>
-            <img src="imagem.jpg" alt="Imagem 1 aqui">
+            <img src="imagem.jpg" alt="Imagem representativa">
         </section>
     </div>
     <script src="script.js"></script>
