--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
         <section class="page">
             <h2>Imagem 1 aqui!</h2>
-            <img src="imagem.jpg" alt="Imagem representativa">
+            <img src="imagem.jpg" alt="Imagem representativa" width="300">
         </section>
     </div>
     <script src="script.js"></script>
